@@ -1,3 +1,8 @@
+2012-07-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* readdir.c (dir_take_control_of): Fix typo for case where
+	we don't have fopendir (e.g., Mac OS X 10.5).
+
 2012-07-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac: Extremely crude hack to get the value of
