@@ -1,3 +1,10 @@
+2012-07-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h (set_RT): Change to take a NODE * parameter.
+	* io.c (set_RT): Change to take a NODE * parameter.
+	* gawkapi.h: Change open hook to input parser in comment.
+	* gawkapi.c (api_set_RT): Adjust call to set_RT.
+
 2012-07-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awk.h (set_RT_to_null, set_RT): Declare functions.
